--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 streamlit
 langchain
 langchain-groq
+langchain-huggingface
 langchain-chroma
 langchain-community
-langchain-huggingface
+langchain-core
 langchain-text-splitters
-pypdf
 python-dotenv
+pypdf
+docx2txt
+sentence-transformers
+chromadb
